tests/should_succeed/unused_global.jou
import "stdlib/io.jou"

global foo: int  # Warning: global variable 'foo' defined but not used

def main() -> int:
    printf("it runs\n")  # Output: it runs
    return 0
