tests/syntax_error/unknown_char.jou
def main() -> int:
    return '\p'  # Error: unknown character literal: '\p'
